[package]
name = "tokentaxrec"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
dec-utils = { git = "https://github.com/winksaville/dec-utils" }
rust_decimal = { version = "1.22.0", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.22.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_utc_time_ms = { git = "https://github.com/winksaville/serde-utc-time-ms" }
time_ms_conversions = { git = "https://github.com/winksaville/time-ms-conversions" }
